--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,63 @@
+
+body{
+	height: 100vh;
+	background: wheat url(https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-639904.png) no-repeat center center;
+	background-size: cover;
+
+}
+
 main{
-text-align: center;
+	text-align: center;
+	height: 100vh;
+	display: flex;
+	align-items:center;
+	justify-content:center;	
 }
 
 main>div{
-display:inline-block;
+	display: inline-block;
+	background:rgba(0, 0, 0, 0.2);
+	border-radius:6px;
+}
+
+.row{
+margin: 20px 10px;
+}
+
+.row:nth-child(2){
+	margin-left: -20px;
+}
+
+.row:nth-child(3){
+	margin-left: -90px;
 }
 
 main>div>div>kbd{
-	border: 1px solid red;
-	padding: 20px 20px;
+	width: 50px;height: 40px;
 	display: inline-block;
 	position: relative;
+	text-transform: uppercase;
+	background:  linear-gradient(to bottom, #292929 0%,#121212 100%);
+	color: #BBC5C5;
+	margin: 0px 10px;
+	border-radius: 6px;
+	border: 1px solid #373737;
+	font-size: 14px;
+	font-family: Arial, Helvetica, sans-serif;
+	box-shadow: 0 0 0 1px #1A1B1C,0 0 0 2px #1F2020, 0 4px 0 0 #080808;
+	position:relative;
+}
 
+main>div>div>kbd>img{
+width: 14px;
+height: 14px;
+position:absolute;
+left: 4px;
+bottom:2px; 
+}
+
+main>div:nth-child(2){
+	padding-left: 0;
 }
 
 main>div>div>kbd>button{
@@ -30,5 +76,11 @@ main>div>div>kbd>button:hover{
 	right: 0px;
 	bottom: 0%;
 	color: black;
-	border: 1px solid black;
+	background: #F1F1F1;
+	border: 1px solid #7B7B7B;
+}
+
+span{
+position:absolute;
+top:2px;left:4px;
 }
